--- a/templates/buyer.html
+++ b/templates/buyer.html
@@ -1,3 +1,5 @@
+{% extends 'home.html' %}
+{% block body %} 
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,6 +20,7 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
+  <h2> Buyer Table</h2>
 
     <table>
         <tr>
@@ -36,6 +39,18 @@ tr:nth-child(even) {
           {% endfor %}
     </table>
 
-
+    
 </body>
 </html>
+ {% endblock %} 
+
+
+
+
+
+
+
+
+
+
+ 
