--- a/templates/product.html
+++ b/templates/product.html
@@ -8,11 +8,19 @@
 table {
   border-collapse: collapse;
   width: 100%;
+  border: 2px solid black; 
+}
+
+.ashu{
+  border: 2px solid black;
+  width: 50px;
+  height: 50px;
+
 }
 
 th, td {
   text-align: left;
-  padding: 8px;
+  padding: 20px;
 }
 
 tr:nth-child(even) {
@@ -25,29 +33,56 @@ tr:nth-child(even) {
 
 <h2 style="text-align:center" >Product Table</h2>
 <div>
-<table style="align-itams:center" " width:100%" >
+<table style="align-itams:center" " width:50%" class="ashu">
   <tr style="text-align:center">
-    <th>company_name</th>
-    <th>company_product</th>
-    <th>product_model_name</th>
-    <th>available</th>
-    <th>product_image</th>
+      <th>product_name</th>
   </tr>
 
   {% for i in product_data %}
     
   <tr>
-    <td>{{i.company_name}}</td>
+    <td>{{i.product_name}}</td>
+    <!-- <td>{{i.company_name}}</td>
     <td>{{i.company_product}}</td>
     <td>{{i.product_model_name}}</td>
     <td>{{i.available}}</td>
-    <td> <img src="{{ i.product_image.url}}" width="60"> </td>
+    <td> <img src="{{ i.product_image.url}}" width="60"> </td> -->
   </tr>
   {% endfor %}
-
-
-
 </table>
+</div>
+
+
+<br>
+
+<div>
+  <table>
+    <tr>
+      <th>Id</th>
+      <th>product_name</th>
+      <th>grocery_item</th>
+      <th>available</th>
+      <th>Action</th>
+    </tr>
+
+    {% for i in grocery_data %}
+    <tr>
+      <td>{{i.id}}</td>
+      <td>{{i.product_name}}</td>
+      <td>{{i.grocery_item}}</td>
+      <td>{{i.available}}</td>
+      <td>
+        <a href="{%url 'updatedata' i.id%}"><b>Edit</a>
+          <form action="{% url 'daletedata' i.id%}">
+            {% csrf_token %}
+            <input type="submit" value="Delete">
+          </form>
+        
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
+
 </div>
 
 </body>
